Prevent clear buton spilling out of header on iphone se

--- a/src/app.css
+++ b/src/app.css
@@ -26,7 +26,12 @@ body {
 }
 
 .du-header__item {
-  margin: 0.5em 0.5em 0 0;
+  margin-top: 0.5em;
+  margin-right: 0.5em;
+}
+
+.du-header__item:last-child {
+  margin-right: 0;
 }
 
 .du-header-text {
